# football-auto-broadcast-

./: .gitignore  README.md  TeamInterfaceContract.md  mediamtx.yml
.claude/: settings.json
CameraCollect/: CameraCollect.cpp  CameraCollect.slnx  CameraCollect.vcxproj  CameraCollect.vcxproj.filters
docs/: A模块第3-5周进度报告.md  DEPLOYMENT_GUIDE.md  MVS下载及环境配置.md  Module_B_Acceptance_Report.md  Module_B_README_vFinal.md  SCRIPT_GUIDE.md  TEST_DUAL_INSTANCE.md  Team Interface Contract v1.1 for Windows.md  Team Interface Contract v1.2 Frozen.md  communication_standard_v1.md  docscrop_strategy.md  docsfile_index_spec.md  docsstorage_spec.md  interface_spec.md  platform_interface_spec_v1.md  splicing_rules.md  主画面裁切参数说明.md  事件 JSON 格式说明 v1.1.md  事件筛选与集锦导出规范.md  关注区域输出格式说明 v1.1.md  关注区域输出格式说明.md  平台调度接口说明.md  录像文件命名与归档规范.md  新版项目计划.md  海康相机MVS SDK安装说明v1.doc.docx  相机配置文件格式说明 v1.doc.docx  相机配置文件格式说明V1.md  统一配置说明.md  联调说明.md  视频输出接口说明v1.doc.docx  视频输出接口说明v1.md  运行说明V1.md
docs/engineer_module/: highlight-generation.md  highlight.md  ingest_streaming.md  platform.md  (+4 more)
module_b_record/: CMakeLists.txt  crop_strategy.md  storage_spec.md
module_b_record/src/: main.cpp
service/vision-event-module/: CMakeLists.txt  vision-event-module_README.md
service/vision-event-module/config/: default_config.yaml
service/vision-event-module/include/: event_types.hpp  json_output.hpp  multi_focus_region.hpp  service.hpp
service/vision-event-module/inference/include/: ball_detector.hpp  event_classifier.hpp
service/vision-event-module/inference/src/: ball_detector.cpp  box_activity_analyzer.cpp  event_classifier.cpp  motion_analyzer.cpp
service/vision-event-module/src/: camera_role.cpp  event_types.cpp  focus_region.cpp  fusion_policy.cpp  http_server.cpp  json_output.cpp  service.cpp
service/vision-event-module/tests/: test_event_types.cpp
service/vision-event-module/training/: README.md
service/vision-event-module/training/configs/: yolo_train.yaml
service/vision-event-module/training/scripts/: extract_frames.py  split_dataset.py  train.py  visualize_labels.py
services/highlight-generation-module/: CMakeLists.txt
services/highlight-generation-module/docs/: 事件筛选与排序规则说明书 v1.0.md  提交集锦生成任务接口说明书 v1.0.md  模块 D 样例输入事件文件说明书 v1.0.md  集锦导出规范说明书 v1.0.md
services/highlight-generation-module/include/: http_server.h  json_utils.h  models.h  pipeline.h
services/highlight-generation-module/src/: ffmpeg_research.md  http_server.cpp  json_utils.cpp  main.cpp  pipeline.cpp
services/ingest-streaming-module/: .gitignore  CMakeLists.txt  copy_dlls.bat  deploy.bat  ingest-streaming-module.slnx  ingest-streaming-module.vcxproj  ingest-streaming-module.vcxproj.filters  start.bat  test_dual_instance.ps1
services/ingest-streaming-module/config/: ingest_init.sample.json  mediamtx.yml
services/ingest-streaming-module/ignore/: ingest-streaming-module.vcxproj  ingest-streaming-module.vcxproj.filters
services/ingest-streaming-module/ignore/ingest-s.72ff2d92/Debug/: vc145.idb
services/ingest-streaming-module/ignore/ingest-s.72ff2d92/Debug/ingest-s.72ff2d92.tlog/: ingest-streaming-module.lastbuildstate
services/ingest-streaming-module/ignore/ingest-s.72ff2d92/x64/Debug/: ingest-streaming-module.exe.recipe
services/ingest-streaming-module/ignore/ingest-s.72ff2d92/x64/Debug/ingest-s.72ff2d92.tlog/: ingest-streaming-module.lastbuildstate
services/ingest-streaming-module/ignore/ingest-s.72ff2d92/x64/Release/: ingest-streaming-module.exe.recipe  ingest-streaming-module.iobj  ingest-streaming-module.ipdb
services/ingest-streaming-module/ignore/ingest-s.72ff2d92/x64/Release/ingest-s.72ff2d92.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ingest-streaming-module.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
services/ingest-streaming-module/include/: camera_controller.h  camera_device.h  camera_manager.h  frame_data.h  gst_rtsp_streamer.h  http_server.h  ingest_engine.h  stream_config.h
services/ingest-streaming-module/src/: camera_controller.cpp  camera_device.cpp  camera_manager.cpp  gst_rtsp_streamer.cpp  http_server.cpp  ingest_engine.cpp  main.cpp
services/ingest-streaming-module/tool/: camera_enum.cpp
services/platform-orchestration-module/: CMakeLists.txt
services/platform-orchestration-module/configs/: config.ini
services/platform-orchestration-module/src/: data_models.h  httplib.h  main.cpp
services/platform-orchestration-module/web/: index.html  matches.html  status.html
services/record-program-module/: CMakeLists.txt  config.json
services/record-program-module/src/: main.cpp
services/vision-event-module/: CMakeLists.txt  README.md  vision-event-module_README.md
services/vision-event-module/config/: default_config.yaml
services/vision-event-module/include/: camera_role.hpp  event_types.hpp  ffmpeg_frame_reader.hpp  focus_region.hpp  frame_input.hpp  fusion_policy.hpp  http_server.hpp  program_decision.hpp  service.hpp
services/vision-event-module/inference/include/: ball_detector.hpp  box_activity_analyzer.hpp  goal_assist_analyzer.hpp  motion_analyzer.hpp
services/vision-event-module/inference/src/: goal_assist_analyzer.cpp  motion_analyzer.cpp
services/vision-event-module/src/: event_types.cpp  ffmpeg_frame_reader.cpp  frame_input.cpp  http_server.cpp  main.cpp  multi_focus_region.cpp  program_decision.cpp  service.cpp
services/vision-event-module/tests/: test_event_types.cpp  test_focus_region.cpp  test_fusion_policy.cpp  test_multi_focus_region.cpp  test_service_algorithm.cpp
services/vision-event-module/training/configs/: yolo_dataset.yaml  yolo_train.yaml
services/vision-event-module/training/detect_test/: detect_test1.py  detect_yolo_kalman_test.py
services/vision-event-module/training/experiments/: ball_yolov8s_v1.md
services/vision-event-module/training/review/: ball_yolov8s_v1_review.md
services/vision-event-module/training/scripts/: convert_format.py  hik_dual_camera_qt.py  prepare_roboflow_single_class.py  split_dataset.py  train.py  visualize_labels.py
(+35 files in other folders)
